Добавляет базовую разметку хедера и промо-блока

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,53 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
   <header class="header">
-
+    <div class="container">
+      <a class="logo" href="/">
+        <img class="logo__img" src="img/" width="50" heaight="22" alt="Логотип">
+      </a>
+    </div>
   </header>
   <main class="main">
-
+    <div class="container">
+      <section class="promo">
+        <div class="promo__info">
+          <p class="promo__subheader">Новосибирск</p>
+          <h1 class="promo__title">Питомник Мейн-Кунов</h1>
+          <p class="promo__slogan">Первый питомник с расширенным спектром услуг</p>
+          <a class="promo__link" href="#">Смотреть котиков</a>
+          <ul class="social social__list">
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <span class="v-hidden">ВКонтакте</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <span class="v-hidden">Twitter</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link" href="#">
+                <span class="v-hidden">Facebook</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="promo__img">
+          <div class="promo__img-wrap">
+            <img class="promo__img" src="img/" alt="Крупное изображение Мейн-Куна">
+          </div>
+        </div>
+      </section>
+    </div>
   </main>
   <footer class="footer">
-
+    <div class="container">
+    </div>
   </footer>
 </body>
+
 </html>
