Добавляет перечень блоков на страницу

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </header>
   <main class="main">
     <div class="container">
+      <!-- Промо-блок -->
       <section class="promo">
         <div class="promo__info">
           <p class="promo__subheader">Новосибирск</p>
@@ -48,6 +49,34 @@
             <img class="promo__img" src="img/" alt="Крупное изображение Мейн-Куна">
           </div>
         </div>
+      </section>
+      <!-- Питомцы -->
+      <section class="pets">
+        <h2 class="pets__title">Питомцы</h2>
+      </section>
+      <!-- Особенности породы -->
+      <section class="bread">
+        <h2 class="bread__title">Особенности породы</h2>
+      </section>
+      <!-- Почему мы -->
+      <section class="features">
+        <h2 class="features__title">Почему именно мы?</h2>
+      </section>
+      <!-- Об уходе -->
+      <section class="care">
+        <h2 class="care__title">Об уходе за Мейн-Куном</h2>
+      </section>
+      <!-- Наша команда -->
+      <section class="team">
+        <h2 class="team__title">Наша команда</h2>
+      </section>
+      <!-- Вопрос-ответ -->
+      <section class="questions">
+        <h2 class="questions__title">Вопрос-Ответ</h2>
+      </section>
+      <!-- Отзывы -->
+      <section class="reviews">
+        <h2 class="reviews__title">Отзывы</h2>
       </section>
     </div>
   </main>
