Добавляет разметку футера

--- a/index.html
+++ b/index.html
@@ -82,6 +82,32 @@
   </main>
   <footer class="footer">
     <div class="container">
+      <!-- Соц. кнопки -->
+      <ul class="social social__list">
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="v-hidden">ВКонтакте</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="v-hidden">Twitter</span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="v-hidden">Facebook</span>
+          </a>
+        </li>
+      </ul>
+      <!-- Контакты -->
+      <p class="contacts">
+        Новосибирск, Пушкинский проспект, 19
+      </p>
+      <!-- Телефон -->
+      <p class="phone">
+        <a class="phone__link" href="tel:+73839006465" title="Позвоните нам">+7 (383) 900-64-65</a>
+      </p>
     </div>
   </footer>
 </body>
