Переносит контейнеры внутрь секций

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     </div>
   </header>
   <main class="main">
-    <div class="container">
-      <!-- Промо-блок -->
-      <section class="promo">
+    <!-- Промо-блок -->
+    <section class="promo">
+      <div class="container">
         <div class="promo__info">
           <p class="promo__subheader">Новосибирск</p>
           <h1 class="promo__title">Питомник Мейн-Кунов</h1>
@@ -49,39 +49,57 @@
             <img class="promo__img" src="img/" alt="Крупное изображение Мейн-Куна">
           </div>
         </div>
-      </section>
-      <!-- Питомцы -->
-      <section class="pets">
+      </div>
+    </section>
+    <!-- Питомцы -->
+    <section class="pets">
+      <div class="container">
         <h2 class="pets__title">Питомцы</h2>
-      </section>
-      <!-- Особенности породы -->
-      <section class="bread">
+      </div>
+    </section>
+    <!-- Особенности породы -->
+    <section class="bread">
+      <div class="container">
         <h2 class="bread__title">Особенности породы</h2>
-      </section>
-      <!-- Почему мы -->
-      <section class="features">
+      </div>
+    </section>
+    <!-- Почему мы -->
+    <section class="features">
+      <div class="container">
         <h2 class="features__title">Почему именно мы?</h2>
-      </section>
-      <!-- Об уходе -->
-      <section class="care">
+      </div>
+    </section>
+    <!-- Об уходе -->
+    <section class="care">
+      <div class="container">
         <h2 class="care__title">Об уходе за Мейн-Куном</h2>
-      </section>
-      <!-- Наша команда -->
-      <section class="team">
+      </div>
+    </section>
+    <!-- Наша команда -->
+    <section class="team">
+      <div class="container">
         <h2 class="team__title">Наша команда</h2>
-      </section>
-      <!-- Вопрос-ответ -->
-      <section class="questions">
+      </div>
+    </section>
+    <!-- Вопрос-ответ -->
+    <section class="questions">
+      <div class="container">
         <h2 class="questions__title">Вопрос-Ответ</h2>
-      </section>
-      <!-- Отзывы -->
-      <section class="reviews">
+      </div>
+    </section>
+    <!-- Отзывы -->
+    <section class="reviews">
+      <div class="container">
         <h2 class="reviews__title">Отзывы</h2>
-      </section>
-    </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
+      <!-- Логотип -->
+      <a class="logo logo--footer" href="/">
+        <img class="logo__img" src="img/" width="50" heaight="22" alt="Логотип">
+      </a>
       <!-- Соц. кнопки -->
       <ul class="social social__list">
         <li class="social__item">
