Добавляет разметку блока отзывов

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </ul>
         </div>
         <div class="promo__img">
-          <div class="promo__img-wrap">
+          <div class="promo__img-wrap img-wrap">
             <img class="promo__img" src="img/" alt="Крупное изображение Мейн-Куна">
           </div>
         </div>
@@ -91,6 +91,42 @@
     <section class="reviews">
       <div class="container">
         <h2 class="reviews__title">Отзывы</h2>
+        <div class="slider">
+          <a class="slider__control slider__control--prev" href="#">
+            <span class="v-hidden">Предыдущий</span>
+          </a>
+          <ul class="reviews__list slider__list">
+            <li class="reviews__item review slide active">
+              <div class="review__img-wrap img-wrap">
+                <img class="review__img" src="img/" alt="Фото автора отзыва">
+              </div>
+              <h3 class="review__author">Серёжа Попов</h3>
+              <p class="review__text">
+                Я выражаю огромную благодарность вашему питомнику. Мой Феликс невероятно умен
+                и воспитан. Огромным плюсом питомника является возможность консультироваться в любое время
+              </p>
+              <div class="review__info">
+                <p class="review__date">23 мая 2018</p>
+                <!-- Соц. кнопки -->
+                <ul class="social social__list review__social">
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <span class="v-hidden">Twitter</span>
+                    </a>
+                  </li>
+                  <li class="social__item">
+                    <a class="social__link" href="#">
+                      <span class="v-hidden">ВКонтакте</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+          <a class="slider__control slider__control--next" href="#">
+            <span class="v-hidden">Следующий</span>
+          </a>
+        </div>
       </div>
     </section>
   </main>
