Добавляет разметку блока Вопрос-Ответ

--- a/index.html
+++ b/index.html
@@ -85,6 +85,66 @@
     <section class="questions">
       <div class="container">
         <h2 class="questions__title">Вопрос-Ответ</h2>
+        <p class="questions__descr">
+          Мы ответим на самые популярные ваши вопросы
+        </p>
+        <ul class="questions__list">
+          <li class="questions__item question opened">
+            <a class="question__link" href="#">
+              <h3 class="question__text">С какого возраста можно забирать котенка из питомника?</h3>
+              <button class="btn question__btn question__btn--opened">
+                <span class="v-hidden">Свернуть</span>
+              </button>
+            </a>
+            <div class="question__answer">
+              <p>
+                Есть важная причина, почему котенка стоит забирать домой только после трех месяцев, — это вакцинация. Первые прививки животному делают в возрасте 8 недель. Ревакцинация проводится через 3–4 недели. То есть котенок, покидающий дом позднее 12 недель, максимально защищен от различных вирусов и инфекций.
+              </p>
+              <p>
+                Так что, чтобы в дома появился психически и физически здоровый котенок, игривый, жизнерадостный, самостоятельный и воспитанный, не спешите забирать его от кошки-мамы раньше трех месяцев.
+              </p>
+            </div>
+          </li>
+          <li class="questions__item question">
+            <a class="question__link" href="#">
+              <h3 class="question__text">Как зарезервировать котенка?</h3>
+              <button class="btn question__btn">
+                <span class="v-hidden">Показать ответ</span>
+              </button>
+            </a>
+            <div class="question__answer">
+              <p>
+                Текст второго ответа
+              </p>
+            </div>
+          </li>
+          <li class="questions__item question">
+            <a class="question__link" href="#">
+              <h3 class="question__text">Можно ли купить кота, если я живу в другом городе?</h3>
+              <button class="btn question__btn">
+                <span class="v-hidden">Показать ответ</span>
+              </button>
+            </a>
+            <div class="question__answer">
+              <p>
+                Текст третьего ответа
+              </p>
+            </div>
+          </li>
+          <li class="questions__item question">
+            <a class="question__link" href="#">
+              <h3 class="question__text">Как подготовить дом к приему нового питомца? </h3>
+              <button class="btn question__btn">
+                <span class="v-hidden">Показать ответ</span>
+              </button>
+            </a>
+            <div class="question__answer">
+              <p>
+                Текст четвёртого ответа
+              </p>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
     <!-- Отзывы -->
