Добавляет разметку блока Об уходе

--- a/index.html
+++ b/index.html
@@ -70,9 +70,53 @@
       </div>
     </section>
     <!-- Об уходе -->
-    <section class="care">
+    <section class="articles">
       <div class="container">
-        <h2 class="care__title">Об уходе за Мейн-Куном</h2>
+        <h2 class="articles__title">Об уходе за Мейн-Куном</h2>
+        <ul class="articles__list">
+          <li class="articles__item article">
+            <div class="article__desc">
+              <h3 class="article__title">Шерсть</h3>
+              <p class="article__preview">
+                Мы разработали 8 правил, следуя которым, шерсть вашего кота всегда будет блестящей, мягкой и послушной
+              </p>
+            </div>
+            <a class="article__link" href="#">
+              <span class="v-hidden">Открыть статью</span>
+            </a>
+          </li>
+          <li class="articles__item article">
+            <div class="article__desc">
+              <h3 class="article__title">Уши и глаза</h3>
+              <p class="article__preview">
+                Владельцам котов необходимо регулярно осматривать ушки и глаза своих питомцев, ведь это может быть признаками заболевания
+              </p>
+            </div>
+            <a class="article__link" href="#">
+              <span class="v-hidden">Открыть статью</span>
+            </a>
+          </li>
+          <li class="articles__item article">
+            <div class="article__desc">
+              <h3 class="article__title">Когти</h3>
+              <p class="article__preview">
+                Нужно ли стричь когти? Это мы и выясним, плюс ко всему расскажем как подобрать идеальную когтеточку
+              </p>
+            </div>
+            <a class="article__link" href="#">
+              <span class="v-hidden">Открыть статью</span>
+            </a>
+          </li>
+          <li class="articles__item article">
+            <div class="article__desc">
+              <h3 class="article__title">Питание</h3>
+              <p class="article__preview">В нашем питомнике существует два подхода: натуральное питание и питание промышленными кормами, но выбирать только вам</p>
+            </div>
+            <a class="article__link" href="#">
+              <span class="v-hidden">Открыть статью</span>
+            </a>
+          </li>
+        </ul>
       </div>
     </section>
     <!-- Наша команда -->
