Добавляет вёрстку блока Особенности породы

--- a/index.html
+++ b/index.html
@@ -117,9 +117,33 @@
       </div>
     </section>
     <!-- Особенности породы -->
-    <section class="bread">
+    <section class="breed">
       <div class="container">
-        <h2 class="bread__title">Особенности породы</h2>
+        <h2 class="breed__title">Особенности породы</h2>
+        <p class="breed__descr">
+          Мейн-Кун - это порода, которая вызывает к себе уважение. Приобретая в свой дом этого питомца, вы получите умное животное, которому нет равных
+        </p>
+        <div class="breed__content">
+          <!-- Изображение -->
+          <div class="breed__img-wrap img-wrap">
+            <img class="breed__img" src="img/" alt="Изображение Мейн-Куна">
+          </div>
+          <!-- Список качеств -->
+          <ul class="breed__features features">
+            <li class="features__item feature">
+              Легко уживается в семьях с детьми или другими животными
+            </li>
+            <li class="features__item feature">
+              Выполняет команды как дрессированная собака
+            </li>
+            <li class="features__item feature">
+              Вес может достигать 12 кг, а длина 1 м
+            </li>
+            <li class="features__item feature">
+              Внешний вид этой кошки похож на дикую рысь
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
     <!-- Почему мы -->
