Добавляет вёрстку Почему мы

--- a/index.html
+++ b/index.html
@@ -147,9 +147,32 @@
       </div>
     </section>
     <!-- Почему мы -->
-    <section class="features">
+    <section class="services">
       <div class="container">
-        <h2 class="features__title">Почему именно мы?</h2>
+        <h2 class="services__title">Почему именно мы?</h2>
+        <p class="services__desc">
+          Приобретая  животное в нашем питомнике, вы получите
+        </p>
+        <ul class="services__list">
+          <li class="services__item service service--accented">
+            <img class="service__icon" src="img/" alt="Иконка 1">
+            <p class="service__text">
+              Бесплатное ветеринарное обслуживание 5 лет
+            </p>
+          </li>
+          <li class="services__item service">
+            <img class="service__icon" src="img/" alt="Иконка 2">
+            <p class="service__text">
+              Консультирование по любому вопросу 24 часа в сутки
+            </p>
+          </li>
+          <li class="services__item service">
+            <img class="service__icon" src="img/" alt="Иконка 3">
+            <p class="service__text">
+              Индивидуальный подбор питания для вашего кота
+            </p>
+          </li>
+        </ul>
       </div>
     </section>
     <!-- Об уходе -->
