Добавляет базовую вёрстку блока Наша команда

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="container">
         <h2 class="services__title">Почему именно мы?</h2>
         <p class="services__desc">
-          Приобретая  животное в нашем питомнике, вы получите
+          Приобретая животное в нашем питомнике, вы получите
         </p>
         <ul class="services__list">
           <li class="services__item service service--accented">
@@ -229,6 +229,52 @@
     <section class="team">
       <div class="container">
         <h2 class="team__title">Наша команда</h2>
+        <p class="team__desc">
+          Все сотрудники нашего питомника дипломированые специалисты в области фелинологии и ветеринарии
+        </p>
+        <!-- Слайдер -->
+        <div class="slider team__slider">
+          <a class="slider__control slider__control--prev" href="#">
+            <span class="v-hidden">Предыдущий</span>
+          </a>
+          <ul class="team__list slider__list">
+            <li class="team__item team-mate slide active">
+              <div class="team-mate__img-wrap img-wrap">
+                <img class="team-mate__img" src="img/" alt="Фото сотрудника">
+              </div>
+              <div class="team-mate__info">
+                <h3 class="team-mate__name">Серёжа Попов</h3>
+                <p class="team-mate__role">
+                  Основатель питомника
+                </p>
+                <p class="team-mate__text">
+                  Наш питомник занимается разведением Мейн-Кунов на протяжении 15 лет. Мы в ответе за каждого приобретенного вами питомца
+                </p>
+                <!-- Соц. кнопки -->
+                <ul class="social social__list team-mate__social">
+                  <li class="social__item social__item--fb">
+                    <a class="social__link" href="#">
+                      <span class="v-hidden">Facebook</span>
+                    </a>
+                  </li>
+                  <li class="social__item social__item--tw">
+                    <a class="social__link" href="#">
+                      <span class="v-hidden">Twitter</span>
+                    </a>
+                  </li>
+                  <li class="social__item social__item--vk">
+                    <a class="social__link" href="#">
+                      <span class="v-hidden">ВКонтакте</span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+          <a class="slider__control slider__control--next" href="#">
+            <span class="v-hidden">Следующий</span>
+          </a>
+        </div>
       </div>
     </section>
     <!-- Вопрос-ответ -->
@@ -302,7 +348,7 @@
       <div class="container">
         <h2 class="reviews__title">Отзывы</h2>
         <!-- Слайдер -->
-        <div class="slider">
+        <div class="slider reviews__slider">
           <a class="slider__control slider__control--prev" href="#">
             <span class="v-hidden">Предыдущий</span>
           </a>
