Добавляет общие классы

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       </div>
     </section>
     <!-- Питомцы -->
-    <section class="pets">
+    <section class="module pets">
       <div class="container">
-        <h2 class="pets__title">Питомцы</h2>
-        <p class="pets__descr">Все представители нашего питомника имеют ветеринарный паспорт с отметками о прививках и документ с родословной</p>
+        <h2 class="module__title pets__title">Питомцы</h2>
+        <p class="module__subtl pets__descr">Все представители нашего питомника имеют ветеринарный паспорт с отметками о прививках и документ с родословной</p>
         <div class="pets__tabs tabs">
           <ul class="tabs__list">
             <li class="tabs__item tab active" id="he-cats">
@@ -117,10 +117,10 @@
       </div>
     </section>
     <!-- Особенности породы -->
-    <section class="breed">
+    <section class="module breed">
       <div class="container">
-        <h2 class="breed__title">Особенности породы</h2>
-        <p class="breed__descr">
+        <h2 class="module__title breed__title">Особенности породы</h2>
+        <p class="module__subtl breed__descr">
           Мейн-Кун - это порода, которая вызывает к себе уважение. Приобретая в свой дом этого питомца, вы получите умное животное, которому нет равных
         </p>
         <div class="breed__content">
@@ -147,10 +147,10 @@
       </div>
     </section>
     <!-- Почему мы -->
-    <section class="services">
+    <section class="module services">
       <div class="container">
-        <h2 class="services__title">Почему именно мы?</h2>
-        <p class="services__desc">
+        <h2 class="module__title services__title">Почему именно мы?</h2>
+        <p class="module__subtl services__desc">
           Приобретая животное в нашем питомнике, вы получите
         </p>
         <ul class="services__list">
@@ -176,9 +176,9 @@
       </div>
     </section>
     <!-- Об уходе -->
-    <section class="articles">
+    <section class="module articles">
       <div class="container">
-        <h2 class="articles__title">Об уходе за Мейн-Куном</h2>
+        <h2 class="module__title articles__title">Об уходе за Мейн-Куном</h2>
         <ul class="articles__list">
           <li class="articles__item article">
             <div class="article__desc">
@@ -226,10 +226,10 @@
       </div>
     </section>
     <!-- Наша команда -->
-    <section class="team">
+    <section class="module team">
       <div class="container">
-        <h2 class="team__title">Наша команда</h2>
-        <p class="team__desc">
+        <h2 class="module__title team__title">Наша команда</h2>
+        <p class="module__subtl team__desc">
           Все сотрудники нашего питомника дипломированые специалисты в области фелинологии и ветеринарии
         </p>
         <!-- Слайдер -->
@@ -278,10 +278,10 @@
       </div>
     </section>
     <!-- Вопрос-ответ -->
-    <section class="questions">
+    <section class="module questions">
       <div class="container">
-        <h2 class="questions__title">Вопрос-Ответ</h2>
-        <p class="questions__descr">
+        <h2 class="module__title questions__title">Вопрос-Ответ</h2>
+        <p class="module__subtl questions__descr">
           Мы ответим на самые популярные ваши вопросы
         </p>
         <ul class="questions__list">
@@ -344,9 +344,9 @@
       </div>
     </section>
     <!-- Отзывы -->
-    <section class="reviews">
+    <section class="module reviews">
       <div class="container">
-        <h2 class="reviews__title">Отзывы</h2>
+        <h2 class="module__title reviews__title">Отзывы</h2>
         <!-- Слайдер -->
         <div class="slider reviews__slider">
           <a class="slider__control slider__control--prev" href="#">
