Добавляет общие стили

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </section>
     <!-- Питомцы -->
-    <section class="module pets">
+    <section class="module module--light pets">
       <div class="container">
         <h2 class="module__title pets__title">Питомцы</h2>
         <p class="module__subtl pets__descr">Все представители нашего питомника имеют ветеринарный паспорт с отметками о прививках и документ с родословной</p>
@@ -119,7 +119,7 @@
       </div>
     </section>
     <!-- Особенности породы -->
-    <section class="module breed">
+    <section class="module module--light breed">
       <div class="container">
         <h2 class="module__title breed__title">Особенности породы</h2>
         <p class="module__subtl breed__descr">
@@ -178,7 +178,7 @@
       </div>
     </section>
     <!-- Об уходе -->
-    <section class="module articles">
+    <section class="module module--light articles">
       <div class="container">
         <h2 class="module__title articles__title">Об уходе за Мейн-Куном</h2>
         <ul class="articles__list">
@@ -280,7 +280,7 @@
       </div>
     </section>
     <!-- Вопрос-ответ -->
-    <section class="module questions">
+    <section class="module module--light questions">
       <div class="container">
         <h2 class="module__title questions__title">Вопрос-Ответ</h2>
         <p class="module__subtl questions__descr">
@@ -346,7 +346,7 @@
       </div>
     </section>
     <!-- Отзывы -->
-    <section class="module reviews">
+    <section class="module module--light reviews">
       <div class="container">
         <h2 class="module__title reviews__title">Отзывы</h2>
         <!-- Слайдер -->
