Добавляет базовые стили промо-блока

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
       <div class="container">
         <div class="promo__info">
           <p class="promo__subheader">Новосибирск</p>
-          <h1 class="promo__title">Питомник Мейн-Кунов</h1>
+          <h1 class="module__title promo__title">Питомник Мейн-Кунов</h1>
           <p class="promo__slogan">Первый питомник с расширенным спектром услуг</p>
-          <a class="promo__link" href="#">Смотреть котиков</a>
+          <div class="promo__link-wrap">
+            <a class="btn btn__link promo__link" href="#">Смотреть котиков</a>
+          </div>
           <ul class="social social__list">
             <li class="social__item">
               <a class="social__link" href="#">
@@ -48,7 +50,7 @@
         </div>
         <div class="promo__img">
           <div class="promo__img-wrap img-wrap">
-            <img class="promo__img" src="img/" alt="Крупное изображение Мейн-Куна">
+            <img class="promo__pic" src="img/" alt="Крупное изображение Мейн-Куна">
           </div>
         </div>
       </div>
