Добавляет базовые стили элементам блока Питомцы

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Main Coon</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Yeseva+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&family=Yeseva+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -21,14 +21,14 @@
   </header>
   <main class="main">
     <!-- Промо-блок -->
-    <section class="promo">
+    <section class="module promo">
       <div class="container">
         <div class="promo__info">
           <p class="promo__subheader">Новосибирск</p>
           <h1 class="module__title promo__title">Питомник Мейн-Кунов</h1>
           <p class="promo__slogan">Первый питомник с расширенным спектром услуг</p>
-          <div class="promo__link-wrap">
-            <a class="btn btn__link promo__link" href="#">Смотреть котиков</a>
+          <div class="module__link-wrap promo__link-wrap">
+            <a class="btn btn--link promo__link" href="#">Смотреть котиков</a>
           </div>
           <ul class="social social__list">
             <li class="social__item">
@@ -115,7 +115,7 @@
           </div>
         </div>
         <!-- Ссылка -->
-        <div class="pets__link-wrap">
+        <div class="module__link-wrap pets__link-wrap">
           <a class="btn btn--link pets__link" href="#">Смотреть больше</a>
         </div>
       </div>
